[gd_scene load_steps=9 format=2]

[ext_resource path="res://babosos/Space_baboso_basic.gd" type="Script" id=1]
[ext_resource path="res://gfx/Space_baboso_basic.png" type="Texture" id=2]
[ext_resource path="res://sounds/Baboso_basic_hurt.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/Baboso_bullet_shoot.wav" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=2]
resource_name = "death"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 8 ]
}

[sub_resource type="Animation" id=3]
resource_name = "win"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 6 )

[node name="Space_baboso_basic" type="Area2D" groups=[
"total_babosos",
]]
position = Vector2( 80, 48 )
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 9
frame = 2

[node name="BabosoShooting" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )
hframes = 9
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )
anims/death = SubResource( 2 )
anims/win = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -4.039

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -80, -48 )
stream = ExtResource( 6 )

[node name="ShoothFrameLenght" type="Timer" parent="."]
wait_time = 0.3
[connection signal="area_entered" from="." to="." method="_on_Space_baboso_basic_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Space_baboso_basic_area_exited"]
[connection signal="area_shape_entered" from="." to="." method="_on_Baboso_get_hit_by_Player_laser"]
[connection signal="timeout" from="ShoothFrameLenght" to="." method="_on_ShoothFrameLenght_timeout"]
